-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.0.0 Alpha
Install Android binaries via online installer (using staging repository), sha1: 0f7c2c37395cad5a6692123d270be9df2e5be189. Launch command prompt, set:
set CMAKE_PREFIX_PATH=c:\Users\joaijala\RTA\qt5\6.0.0\android_arm64_v8a\lib\cmake
Run cmake CMakeLists.txt on e.g. c:\Users\joaijala\RTA\qt5\6.0.0\Examples\Qt-6.0.0\gui\analogclock, results:
-- Found WrapAtomic: TRUE CMake Warning at C:/Users/joaijala/RTA/qt5/Tools/CMake_64/share/cmake-3.17/Modules/CMakeFindDependencyMacro.cmake:47 (find_package): By not providing "FindQt6CoreTools.cmake" in CMAKE_MODULE_PATH this project has asked CMake to find a package configuration file provided by "Qt6CoreTools", but CMake did not find one. Could not find a package configuration file provided by "Qt6CoreTools" (requested version 6.0.0) with any of the following names: Qt6CoreToolsConfig.cmake qt6coretools-config.cmake Add the installation prefix of "Qt6CoreTools" to CMAKE_PREFIX_PATH or set "Qt6CoreTools_DIR" to a directory containing one of the above files. If "Qt6CoreTools" provides a separate development package or SDK, be sure it has been installed. Call Stack (most recent call first): C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6Core/Qt6CoreDependencies.cmake:50 (find_dependency) C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6Core/Qt6CoreConfig.cmake:39 (include) C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6/Qt6Config.cmake:90 (find_package) CMakeLists.txt:19 (find_package) -- Performing Test HAVE_EGL -- Performing Test HAVE_EGL - Failed -- Could NOT find EGL (missing: EGL_INCLUDE_DIR HAVE_EGL EGL_LIBRARY) -- Performing Test HAVE_GLESv2 -- Performing Test HAVE_GLESv2 - Failed -- Could NOT find GLESv2 (missing: GLESv2_INCLUDE_DIR GLESv2_LIBRARY HAVE_GLESv2 HAVE_GLESv2) CMake Warning at C:/Users/joaijala/RTA/qt5/Tools/CMake_64/share/cmake-3.17/Modules/CMakeFindDependencyMacro.cmake:47 (find_package): By not providing "FindQt6WidgetsTools.cmake" in CMAKE_MODULE_PATH this project has asked CMake to find a package configuration file provided by "Qt6WidgetsTools", but CMake did not find one. Could not find a package configuration file provided by "Qt6WidgetsTools" (requested version 6.0.0) with any of the following names: Qt6WidgetsToolsConfig.cmake qt6widgetstools-config.cmake Add the installation prefix of "Qt6WidgetsTools" to CMAKE_PREFIX_PATH or set "Qt6WidgetsTools_DIR" to a directory containing one of the above files. If "Qt6WidgetsTools" provides a separate development package or SDK, be sure it has been installed. Call Stack (most recent call first): C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6Widgets/Qt6WidgetsDependencies.cmake:50 (find_dependency) C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6Widgets/Qt6WidgetsConfig.cmake:38 (include) C:/Users/joaijala/RTA/qt5/6.0.0/android_arm64_v8a/lib/cmake/Qt6/Qt6Config.cmake:90 (find_package) CMakeLists.txt:21 (find_package) -- Configuring done CMake Error: AUTOMOC for target gui_analogclock: Could not find moc executable target Qt6::moc CMake Generate step failed. Build files cannot be regenerated correctly.
On same environment, if the CMAKE_PREFIX_PATH is set to c:\Users\joaijala\RTA\qt5\6.0.0\msvc2019_64\lib\cmake (assuming msvc binaries are installed to that location) same example is build fine with cmake.
Does Android need some extra configurations?
- is required for
-
QTBUG-85982
Android applications and examples build on Qt 6.0 with cmake
-
- Closed
-
- relates to
-
QTBUG-87068 simplify args needed for qt-cmake for Android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-87066 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 315949,5 | Android: unify deployment-settings.json path to unix format | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 316033,2 | Android: account for native separators when checking a dependency path | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 316098,4 | Android: Make checking a dependency path accept both separator styles | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 316228,3 | Android: use shell path format when running qmake install step | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 316369,2 | Android: use shell path format when running qmake install step | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |